--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Audio Sprite Loader and Plugin for Webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "tsc"
   },
   "repository": {
     "type": "git",
