--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Audio Sprite Loader and Plugin for Webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register test/**Test.ts",
     "prepublish": "tsc"
   },
   "repository": {
@@ -30,11 +30,16 @@
     "howler": "^2.0.9"
   },
   "devDependencies": {
+    "@types/assert": "^0.0.31",
     "@types/audiosprite": "^0.6.0",
     "@types/loader-utils": "^1.1.2",
+    "@types/mocha": "^2.2.48",
     "@types/webpack": "^3.8.8",
+    "assert": "^1.4.1",
     "howler": "^2.0.9",
     "html-webpack-plugin": "^2.30.1",
+    "mocha": "^5.0.1",
+    "ts-node": "^4.1.0",
     "typescript": "^2.7.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
