--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "audiosprite-loader",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Audio Sprite Loader and Plugin for Webpack",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha --require ts-node/register test/**Test.ts",
     "prepublish": "tsc"
